--- a/src/App.css
+++ b/src/App.css
@@ -92,7 +92,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .btn--secondary {
   background: transparent;
-  color: var(--color-secondary);
+  color: #fff;
   border: 1px solid var(--color-secondary);
 }
 .btn--secondary:hover,
